--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <link rel="stylesheet" href="libs/bootstrap.css" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div class="container">
@@ -158,6 +158,6 @@
     </div>
     </form>
 </div>
-<script src="js/script1.js"></script>
+<script src="script1.js"></script>
 </body>
 </html>
